# AI_Agent_Based_Data_Quality_Framework

./: .env.example  .gitignore  HITL_INTEGRATION_SUMMARY.md  PROJECT_STRUCTURE_ANALYSIS.md  README.md  RUN.md  STREAMLIT_QUICKSTART.md  pyproject.toml  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  tests.yml
configs/: agents.yml  config_loader.py  hitl.yml  prompts.yml  rules.yml
docs/: HITL_GUIDE.md  QUICK_START.md  human_in_the_loop.md
examples/: adaptive_learning_demo.py  hitl_complete_demo.py
scripts/: README.md  clean.sh  run_streamlit.sh  run_tests.sh  setup.sh  start_streamlit.bat  start_streamlit.sh
src/healthdq/: config.py  pipeline.py
src/healthdq/agents/: base_agent.py  coordinator.py
src/healthdq/communication/: message.py  protocol.py  router.py
src/healthdq/hitl/: __init__.py  active_learning.py  annotator_manager.py  approval.py  disagreement.py  feedback.py  quality_metrics.py  review.py  workflow.py
src/healthdq/learners/: __init__.py  healthcare_detector.py  schema_learner.py
src/healthdq/loaders/: file_loader.py
src/healthdq/metrics/: calculator.py
src/healthdq/prompts/: README.md  __init__.py  base_prompt.py  fhir_analysis.md  prompt_templates.py  schema_learning.md  semantic_analysis.md
src/healthdq/rules/: transform.py
src/healthdq/ui/: streamlit_app.py
src/healthdq/ui/components/: __init__.py  data_viewer.py  hitl_panel.py  metrics_dashboard.py
src/healthdq/ui/pages/: 1_📤_Upload.py  2_📊_Analysis.py  README.md
src/healthdq/utils/: helpers.py  logger.py  validators.py
tests/: test_hitl_integration.py
