[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthdq-ai"
version = "2.0.0"
description = "AI Agent-Based Data Quality Framework for Healthcare Data"
readme = "README.md"
authors = [
    {name = "Agate JarmakoviÄa", email = ""}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "data-quality",
    "healthcare",
    "ai-agents",
    "machine-learning",
    "data-centric-ai",
    "fair-principles",
    "human-in-the-loop",
    "langchain",
    "llm",
]
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "pyyaml==6.0.2",
    "streamlit==1.37.0",
    "langchain==0.2.0",
    "langgraph==0.1.0",
    "pydantic==2.7.0",
    "sentence-transformers==2.7.0",
    "scikit-learn==1.4.2",
    "transformers==4.40.0",
    "torch==2.3.0",
    "chromadb==0.4.24",
    "sqlalchemy==2.0.30",
    "chardet==5.2.0",
    "numpy==1.26.4",
    "polars==0.20.23",
    "pyarrow==16.0.0",
    "plotly==5.21.0",
    "fastapi==0.111.0",
    "uvicorn==0.30.0",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
    "watchdog==4.0.1",
    "requests==2.31.0",
    "aiohttp==3.9.5",
    "fhir.resources==7.1.0",
    "loguru==0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
    "flake8==7.0.0",
    "black==24.3.0",
    "mypy==1.10.0",
    "isort==5.13.2",
    "pylint==3.1.0",
    "pre-commit==3.7.0",
    "locust==2.24.0",
    "sphinx==7.3.7",
    "sphinx-rtd-theme==2.0.0",
    "ipython==8.23.0",
    "jupyter==1.0.0",
    "notebook==7.1.2",
    "ipdb==0.13.13",
]

[project.urls]
Homepage = "https://github.com/AgateJarmakovica/AI_Agent_Based_Data_Quality_Framework"
Documentation = "https://github.com/AgateJarmakovica/AI_Agent_Based_Data_Quality_Framework/docs"
Repository = "https://github.com/AgateJarmakovica/AI_Agent_Based_Data_Quality_Framework"
"Bug Tracker" = "https://github.com/AgateJarmakovica/AI_Agent_Based_Data_Quality_Framework/issues"

[project.scripts]
healthdq = "healthdq.cli:main"
healthdq-api = "healthdq.api.server:run"
healthdq-ui = "healthdq.ui.streamlit_app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["healthdq*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=healthdq --cov-report=html --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/healthdq"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100
